Fri Jan 26 14:13:32 2001  Ossama Othman  <ossama@uci.edu>

	* ace/OS.h:
	* ace/OS.i (mutex_timedlock):

	  Wrapped the pthread_mutex_timedlock() function.  It times out if
	  a lock hasn't been acquired by the given absolute time.

	* ace/Synch.h:
	* ace/Synch.i (acquire):

	  Added versions of this method that accept an ACE_Time_Value.
	  They are used to prevent blocking definitely while waiting for a
	  given mutex to become available.

	* ace/config-linux.h (ACE_HAS_MUTEX_TIMEOUTS):

	  glibc 2.2.x supports the pthread_mutex_timedlock() function.

	* ace/config-linux-common.h:

	  Undefine ACE_LACKS_{LLSEEK,LSEEK64}_PROTOTYPE prior to include
	  the KCC configuration file.

	* ace/README:

	  Added ACE_HAS_MUTEX_TIMEOUTS to the list of ACE macros.

Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Log_Msg.cpp (dump): Fixed some unintentional tabs.  Thanks
	  to Mike Curtis for reporting this!

	* ace/SOCK_Dgram_Mcast.cpp (open): Modified the call to
	  ACE_SOCK_Dgram::shared_open() to just pass in this->mcast_
 	  rather than making a local copy that just contained the port
 	  number.  Thanks to Keith Nicewarner <knicewar@erg.sri.com> for
 	  reporting this.

	* tests/Makefile.bor (TESTS): Added Message_Queue_Test_Ex.cpp.

Fri Jan 26 13:37:30 2001  Luther J Baker  <luther@cs.wustl.edu>

	* ace/OS.h:

	  If using PACE, ACE_stat typedefs to pace_stat_s.

Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Message_Queue_Test_Ex.cpp: Fixed some ASYS_* macros with
	  ACE_* stuff.  Thanks to Darrell for reporting this.

	* ace/Message_Queue_T.h,
  	* ace/Message_Queue_T.i,
  	* ace/Message_Queue_T.cpp:
	  Added the ACE_Message_Queue_Ex, which provides a message queue
	  abstraction whose type is templatized.  Thanks to Michael Vitlo
	  <mvitalo@sprynet.com> for contributing this.

	* tests/run_tests.lst: 
  	* tests/run_test.lst: 
	* tests: Added support for the new Message_Queue_Test_Ex.cpp file.